--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,18 +11,19 @@
     </div>
   </header>
   <div class="row text-center" style="display: flex; flex-wrap: wrap;">
-    <% for(var i = 0; i < campgrounds.length; i++) { %>
+    <% campgrounds.forEach(function(campground) { %>
       <div class="col-md-3 col-sm-6">
         <div class="thumbnail">
-          <img style="height: 300px;" src="<%= campgrounds[i].image %>">
+          <img style="height: 300px;" src="<%= campground.image %>">
           <div class="caption">
-            <h4><%= campgrounds[i].name %></h4>
+            <h4><%= campground.name %></h4>
           </div>
+          <p>
+          <a href="/campgrounds/<%=campground._id%>" class="btn btn-primary">More Info</a>
+        </p>
         </div>
-        
-        
       </div>
-    <% } %>
+    <% }); %>
   </div>
   
 </div>
