--- a/views/new.ejs
+++ b/views/new.ejs
@@ -11,10 +11,13 @@
           <input class="form-control" type="text" name="image" placeholder="image url">
         </div>
         <div class="form-group">
+          <input class="form-control" type="text" name="descry" placeholder="A few words please..">
+        </div>
+        <div class="form-group">
           <button class="btn btn-lg btn-primary btn-block">Save Madi!</button>
         </div>
       </form>
-      <a href="/campgrounds">Go Back</a>
+      <a href="/index">Go Back</a>
     </div>
   </div>
 </div>
