--- a/views/new.ejs
+++ b/views/new.ejs
@@ -17,7 +17,7 @@
           <button class="btn btn-lg btn-primary btn-block">Save Madi!</button>
         </div>
       </form>
-      <a href="/index">Go Back</a>
+      <a href="/campgrounds">Go Back</a>
     </div>
   </div>
 </div>
