--- a/views/show.ejs
+++ b/views/show.ejs
@@ -1,8 +1,10 @@
 <% include partials/header %>
 
-<h1><%= campground.name %></li></h1>
-<img src="<%=campground.image%>"
-<p><%= campground.descry %></p>
-
+<h1><%= campground.name %></h1>
+<img src="<%=campground.image%>">
+<p><%= campground.description %></p>
+<% campground.comments.forEach(function(comment) { %>
+    <p><strong><%= comment.author %></strong> ----- <%= comment.text %></p>
+<% }); %>
 
 <% include partials/footer %>
