--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,8 +1,29 @@
 <% include ../partials/header %>
+<div class="container">
+    <div class="row">
+        <div class="col-md-3">
+            <p class="lead">Yelp Camp</p>
+            <div class="list-group">
+                <li class="list-group-item active">Something 1</li>
+                <li class="list-group-item">Something 2</li>
+                <li class="list-group-item">Something 3</li>
+            </div>
+        </div>
+        <div class="col-md-9">
+            <div class="thumbnail">
+                <img class="img-responsive" src="<%=campground.image%>">
+                <div class="caption-full">
+                    <h4 class="pull-right">$10/night</h4>
+                    <h4><a><%= campground.name %></a></h4>
+                    <p><%= campground.description %></p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
-<h1><%= campground.name %></h1>
-<img src="<%=campground.image%>">
-<p><%= campground.description %></p>
+
+
 <% campground.comments.forEach(function(comment) { %>
     <p><strong><%= comment.author %></strong> ----- <%= comment.text %></p>
 <% }); %>
