must be logged in for campgrounds

--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -19,6 +19,7 @@
                     <h4 class="pull-right">$10/night</h4>
                     <h4><a><%= campground.name %></a></h4>
                     <p><%= campground.description %></p>
+                    <p><em>This post has been submitted by <%= campground.author.username %></em></p>
                 </div>
             </div>
             <div class="well">
