--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -11,7 +11,7 @@
           <input class="form-control" type="text" name="image" placeholder="image url">
         </div>
         <div class="form-group">
-          <input class="form-control" type="text" name="descry" placeholder="A few words please..">
+          <input class="form-control" type="text" name="description" placeholder="A few words please..">
         </div>
         <div class="form-group">
           <button class="btn btn-lg btn-primary btn-block">Save Madi!</button>
