--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -17,7 +17,7 @@
               <li><a href="/login">Login</a></li>
               <li><a href="/register">Sign Up</a></li>
             <% } else { %>
-              <li><a href="#">Logged in as <%= currentUser.username %></a></li>
+              <li>Logged in as <%= currentUser.username %></li>
               <li><a href="/logout">Logout</a></li>
             <% } %>
           </ul>
