--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -20,6 +20,10 @@
                     <h4><a><%= campground.name %></a></h4>
                     <p><%= campground.description %></p>
                     <p><em>This post has been submitted by <%= campground.author.username %></em></p>
+                    <a class="btn btn-warning" href="/campgrounds/<%= campground._id %>/edit">Edit Madi?</a>
+                    <form action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
+                        <button class="btn btn-danger">Delete Madi?</button>
+                    </form>
                 </div>
             </div>
             <div class="well">
